--- a/age-curvechart-t1.html
+++ b/age-curvechart-t1.html
@@ -4,10 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>John Data Story-台北市內湖區高齡人口樣態</title>
+    <style>
+        /* 全局樣式重置 */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* 背景和字體設置 */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            line-height: 1.6;
+            padding: 20px;
+        }
+
+        /* 容器樣式 */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            padding: 20px;
+        }
+
+        /* 標題樣式 */
+        h1 {
+            text-align: center;
+            color: #5a67d8;
+            margin-bottom: 20px;
+        }
+
+        /* iframe 樣式 */
+        iframe {
+            display: block;
+            width: 100%;
+            height: 600px;
+            border: none;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+    </style>
 </head>
-<body> 
-    <h1>My Data Story:這是動畫式台北市內湖區A31至A33的curve chart。呈現台北市內湖區高齡人口樣態。</h1>
-    <h2>從中我們可得知A31的人數最多，這也是我們未來需要去重點關注的地方。</h2>
-    <iframe src="https://plotdb.io/v/chart/37121" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
+<body>
+    <div class="container">
+        <h1>My Data Story:這是動畫式台北市內湖區A31至A33的curve chart。呈現台北市內湖區高齡人口樣態。</h1>
+        <h2>從中我們可得知A31的人數最多，這也是我們未來需要去重點關注的地方。</h2>
+        <iframe src="https://plotdb.io/v/chart/37121" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
+    </div>
 </body>
 </html>
