--- a/Taipei-113-12.html
+++ b/Taipei-113-12.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taipei-113-12</title>
+    <title>台北市 113-12 資料視覺化</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f9f9f9;
+            color: #333;
+        }
+        header {
+            background: #0078d7;
+            color: #fff;
+            padding: 1rem 0;
+            text-align: center;
+        }
+        main {
+            padding: 2rem;
+        }
+        iframe {
+            display: block;
+            width: 100%;
+            height: 600px;
+            border: none;
+            margin: 1rem 0;
+        }
+        footer {
+            text-align: center;
+            padding: 1rem 0;
+            background: #333;
+            color: #fff;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>動畫式的臺北市村里級熱圖，透過點擊縣市中的鄉鎮再顯示村里細節。資料以村里為主，但可選擇鄉鎮區塊的資料計算方式要透過村里數值的加總或平均，亦可自由控制是否要顯示鄉鎮區塊。</h1>
-    <p>This is an embedded chart from PlotDB:</p>
-    <iframe src="https://plotdb.io/v/chart/37214" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
+    <header>
+        <h1>台北市 113-12 資料視覺化</h1>
+    </header>
+    <main>
+        <p>動畫式的臺北市村里級熱圖，透過點擊縣市中的鄉鎮再顯示村里細節。</p>
+        <p>資料以村里為主，但可選擇鄉鎮區塊的資料計算方式要透過村里數值的加總或平均，亦可自由控制是否要顯示鄉鎮區塊。</p>
+        <p>以下是視覺化圖表：</p>
+        <iframe src="https://plotdb.io/v/chart/37214" allowfullscreen="true"></iframe>
+    </main>
+    <footer>
+        <p>版權所有 © 2025 台北市開放數據</p>
+    </footer>
 </body>
 </html>
