--- a/a1113345_0429test.html
+++ b/a1113345_0429test.html
@@ -1,62 +1,113 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>臺北市高齡人口資料視覺化</title>
+    <title>高齡化的樂章：以音樂重燃生活熱情</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
             margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
+            font-family: 'Microsoft JhengHei', sans-serif;
+            background: linear-gradient(to bottom, #f7f9fc, #d9e4f5);
             color: #333;
+            line-height: 1.8;
         }
+
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 0;
             text-align: center;
+            padding: 2rem;
+            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+
+        header h1 {
+            font-size: 3.5rem;
+            margin: 0;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        header p {
+            font-size: 1.3rem;
+            margin-top: 0.5rem;
+        }
+
         main {
-            padding: 20px;
+            max-width: 960px;
+            margin: 2rem auto;
+            padding: 2rem;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
+        main h2 {
+            font-size: 2rem;
+            color: #555;
+            margin-bottom: 1rem;
+            border-left: 5px solid #ff9a9e;
+            padding-left: 10px;
+        }
+
+        main p {
+            font-size: 1.1rem;
+            text-align: justify;
+            margin-bottom: 1.5rem;
+        }
+
+        .chart-container {
+            text-align: center;
+            margin: 2rem 0;
+        }
+
         iframe {
-            margin: 20px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            height: 600px;
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+
         footer {
             text-align: center;
-            padding: 10px 0;
-            background-color: #4CAF50;
+            padding: 1.5rem 1rem;
+            margin-top: 2rem;
+            background: #333;
             color: white;
-            margin-top: 20px;
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>臺北市高齡人口資料視覺化</h1>
+        <h1>高齡化的樂章</h1>
+        <p>以音樂重燃生活熱情，打造更有活力的高齡社會</p>
     </header>
     <main>
-        <section>
-            <h2>關於臺北市的高齡人口</h2>
-            <p>
-                臺北市作為臺灣的首都，隨著人口結構的轉變，65歲以上的高齡人口比例持續上升。
-                這對於城市的基礎建設、醫療資源分配以及社會福利政策提出了新的挑戰與機遇。
-                我們希望透過資料視覺化，幫助大家理解臺北市高齡化的現況與趨勢。
-            </p>
-        </section>
-        <section>
-            <h2>資料視覺化</h2>
-            <iframe src="https://plotdb.io/v/chart/37214" width="100%" height="600px" allowfullscreen="true" frameborder="0"></iframe>
-        </section>
+        <h2>觀察與啟發</h2>
+        <p>
+            當代許多長者心中仍懷抱年輕時未竟的夢想，退休後雖擁有更多時間，卻常因體力或健康因素感到力不從心，進而陷入無所事事的生活。以我在台北市內湖區的觀察，許多年長者僅以散步打發時間，生活缺乏目標與活力。
+        </p>
+        <p>
+            為此，我提出「高齡爵士鼓社群」的點子，透過輕鬆有趣的爵士鼓活動，促進長者的身心健康與社會互動。此社群不僅僅是一個音樂活動，更是一個為高齡者量身打造的情感支持網絡。
+        </p>
+        <div class="chart-container">
+            <iframe src="https://plotdb.io/v/chart/37456" allowfullscreen="true"></iframe>
+        </div>
+        <h2>高齡爵士鼓社群的設計理念</h2>
+        <p>
+            社群將提供輕量化鼓具與專業指導，設計符合高齡者需求的課程，減少身體負擔，同時提升參與動機。我們相信音樂是一種具療癒力的媒介，能讓長者從中獲得快樂與成就感。
+        </p>
+        <p>
+            更重要的是，社群定期舉辦樂團演出與交流活動，讓參與者能在舞台上發光發熱，滿足自我實現的需求，並緩解孤獨與焦慮感。這樣的設計不僅能提升長者的生活品質，也能讓家人與社會看到高齡者的活力與價值。
+        </p>
+        <h2>未來願景</h2>
+        <p>
+            我們期望透過這樣的創意設計，讓更多長者能重拾對生活的熱情與掌控感。音樂不僅僅是娛樂，更是一種生活方式的改變。未來，我們期待此模式能被複製到更多社區，進一步擴展其影響力，打造一個更健康、有連結感的高齡社會。
+        </p>
     </main>
     <footer>
-        <p>&copy; 2025 臺北市高齡人口資料視覺化</p>
+        2025 © 高齡化的樂章 | 創作者：John2003109
     </footer>
 </body>
 </html>
