--- a/a1113345_0429test.html
+++ b/a1113345_0429test.html
@@ -49,6 +49,14 @@
     </header>
     <main>
         <section>
+            <h2>關於臺北市的高齡人口</h2>
+            <p>
+                臺北市作為臺灣的首都，隨著人口結構的轉變，65歲以上的高齡人口比例持續上升。
+                這對於城市的基礎建設、醫療資源分配以及社會福利政策提出了新的挑戰與機遇。
+                我們希望透過資料視覺化，幫助大家理解臺北市高齡化的現況與趨勢。
+            </p>
+        </section>
+        <section>
             <h2>65歲以上總人口數</h2>
             <iframe src="https://plotdb.io/v/chart/37214" allowfullscreen="true"></iframe>
         </section>
@@ -59,6 +67,22 @@
         <section>
             <h2>80至100歲以上人口分布圖</h2>
             <iframe src="https://plotdb.io/v/chart/37476" allowfullscreen="true"></iframe>
+        </section>
+        <section>
+            <h2>家鄉高齡化的觀察與創意</h2>
+            <p>
+                當代許多長者心中仍懷抱年輕時未竟的夢想，退休後雖擁有更多時間，卻常因體力或健康因素感到力不從心，進而陷入無所事事的生活。
+                以我在台北市內湖區的觀察，許多年長者僅以散步打發時間，生活缺乏目標與活力。
+            </p>
+            <p>
+                為此，我提出「高齡爵士鼓社群」的點子，透過輕鬆有趣的爵士鼓活動，促進長者的身心健康與社會互動。
+                此社群將提供輕量化鼓具與專業指導，設計符合高齡者需求的課程，減少身體負擔，同時提升參與動機。
+                社群定期舉辦樂團演出或交流活動，不僅能滿足長者自我實現的需求，也有助於減輕孤獨與焦慮感，建立情感支持網絡。
+            </p>
+            <p>
+                讓音樂成為長者日常的一部分，重新點燃生活熱情，賦予他們更多活力、自主性與生活品質，
+                打造更健康、有連結感的高齡社會。
+            </p>
         </section>
     </main>
     <footer>
