--- a/a1113345_0429test.html
+++ b/a1113345_0429test.html
@@ -4,42 +4,118 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>臺北市高齡人口資料視覺化</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
     <style>
+        /* 全局樣式 */
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
             color: #333;
+            background: linear-gradient(to bottom, #e0eafc, #cfdef3);
+            overflow-x: hidden;
         }
+
         header {
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #4CAF50, #2a9d8f);
             color: white;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
+
+        header h1 {
+            font-size: 3rem;
+            margin: 0;
+            animation: fadeIn 2s ease-in-out;
+        }
+
+        /* 主內容樣式 */
         main {
+            max-width: 1200px;
+            margin: 20px auto;
             padding: 20px;
-            max-width: 960px;
-            margin: 0 auto;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            animation: slideIn 1.5s ease-out;
         }
+
         section {
             margin-bottom: 40px;
         }
+
+        section h2 {
+            font-size: 2rem;
+            color: #2a9d8f;
+            margin-bottom: 15px;
+            border-left: 5px solid #4CAF50;
+            padding-left: 10px;
+            animation: fadeInUp 1.2s ease-in-out;
+        }
+
+        section p {
+            font-size: 1.2rem;
+            line-height: 1.8;
+            text-align: justify;
+        }
+
         iframe {
             width: 100%;
             height: 600px;
             border: none;
-            border-radius: 5px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            animation: fadeIn 1.5s ease-in-out;
         }
+
         footer {
             text-align: center;
-            padding: 10px 0;
-            background-color: #4CAF50;
+            padding: 20px 10px;
+            background: #4CAF50;
             color: white;
-            margin-top: 20px;
+            margin-top: 40px;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 1rem;
+        }
+
+        /* 動畫效果 */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(20px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                transform: translateY(50px);
+                opacity: 0;
+            }
+            to {
+                transform: translateY(0);
+                opacity: 1;
+            }
         }
     </style>
 </head>
